--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
         <br> 
         <h1>Collegamenti</h1>
-        <p>A quale sito vuole accedere?:</p>
+        <p>A quale sito vuole accedere?</p>
         <br> <br> <br> <br> <br>
         <p><a href="/relazioni/index.html" class="testolezioni">Relazioni - COLLEGATI</a></p>
-        <p><a href="/SitoPassione/index.html" class="testolezioni">Musica (sito passioe) - COLLEGATI</a></p>
+        <p><a href="/SitoPassione/index.html" class="testolezioni">Musica (sito passione) - COLLEGATI</a></p>
         <br>
 
         <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
