--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <title>Prima Relazione</title>
+        <title>Selezione del sito</title>
         <link rel="stylesheet" href="style.css">
         <style> 
             @import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400&display=swap'); 
