--- a/SitoPassione/index.html
+++ b/SitoPassione/index.html
@@ -34,7 +34,7 @@
         <h1>La Musica</h1>
         <p>Il mondo del djing</p>
         <br> <br> <br> <br> <br>
-        <img class=foto src="console.png">
+        <img class=foto src="/media/console.png">
 
         <br> <br> <br> <br> <br>
 
