--- a/SitoPassione/eng/pag3.html
+++ b/SitoPassione/eng/pag3.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <title>La Storia</title>
+        <title>My experience</title>
         <link rel="stylesheet" href="stylesoloheaderefooter.css">
         <style> 
             @import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400&display=swap'); 
@@ -17,36 +17,36 @@
     <body>
 
         <header class="header clearfix">
-            <a href="index.html" class="header__logo">🏠 - Home</a>
+            <a href="index.html" class="header__logo">🏠 - Homepage</a>
             <a href="" class="header__icon-bar">
                 <span></span>
                 <span></span>
                 <span></span>
             </a>
             <ul class="header__menu animate">
-                <li class="header__menu__item"><a class= "testohead" href="pag1.html">Cos'è la musica?</a></li>
-                <li class="header__menu__item"><a class= "testohead" href="pag2.html">La Storia</a></li>
-                <li class="header__menu__item"><a class= "testohead" href="pag3.html">La mia esperienza</a></li>
-                <li class="header__menu__item"><a class= "testohead" href="/eng/pag3.html">🇬🇧</a></li>
+                <li class="header__menu__item"><a class= "testohead" href="pag1.html">What is music?</a></li>
+                <li class="header__menu__item"><a class= "testohead" href="pag2.html">History</a></li>
+                <li class="header__menu__item"><a class= "testohead" href="pag3.html">My experience</a></li>
+                <li class="header__menu__item"><a class= "testohead" href="../pag3.html">🇮🇹</a></li>
             </ul>
         </header>
 
 
         <h1 style="text-align: center; font-family: 'Quicksand', sans-serif;">
-            La mia esperienza
+            My experience
         </h1>
 
         <br> <br> <br>
             
         <p style="text-align: center; font-size: 20px; font-family: 'Quicksand', sans-serif;">
-            Qualche anno fa come regalo da alcuni miei parenti ho chiesto una console da dj ed è arrivata una (ai tempi nuovissima) Numark Mixtrack Pro III. <br>
-            Una semplicissima console ma utile per iniziare, collegabile al pc e con un software da scaricare. Ecco una foto:
+            A few years ago as a gift from some of my relatives I asked for a DJ console and a (at the time brand new) Numark Mixtrack Pro III arrived. <br>
+            A very simple console but useful for starting out, connectable to the PC and with software to download. Here's a photo:
         </p>
 
         <img src="/media/numarkmixtrack.png" style="text-align: center; position: relative; left: 27%;">
 
         <p style="text-align: center; font-size: 20px; font-family: 'Quicksand', sans-serif;">
-            Ed è proprio grazie a questa mia fedele compagna che ho iniziato a fare qualche primo evento:
+            And it is thanks to this faithful companion of mine that I started to do some first events:
         </p>
 
         <br> <br> <br>
@@ -65,8 +65,8 @@
         <br> <br> <br>
 
         <p style="text-align: center; font-size: 20px; font-family: 'Quicksand', sans-serif;">
-            Successivamente ho ottenuto delle prime conoscenze abbastanza "importanti" che mi hanno fatto 
-            accedere alla zona console <br> di alcuni dei locali più famosi di Brescia, come il Molo:
+            Subsequently I obtained some fairly "important" first acquaintances that gave me access to the console area <br> 
+            of some of the most famous clubs in Brescia, such as Molo:
         </p>
 
         <br> <br> <br>
@@ -88,19 +88,19 @@
         <br> <br> <br>
 
         <p style="text-align: center; font-size: 20px; font-family: 'Quicksand', sans-serif;">
-            E' grazie a questi avvenimenti che ho scoperto che mondo ci sia dietro alla "nightlife" e a tutti gli eventi in discoteca.
+            It is thanks to these events that I discovered what world there is behind "nightlife" and all the events in the disco.
         </p>
 
         <br> <br> <br>
 
         <p style="text-align: center; font-size: 20px; font-family: 'Quicksand', sans-serif;">
-            In futuro l'obiettivo sarà diventare un DJ di fama internazionale. C'è ancora tanta strada da fare, ma chissà!
+            In the future the goal will be to become an internationally famous DJ. There is still a long way to go, but who knows!
         </p>
 
         <br> <br> <br>
 
         <footer class="footer">
-            <p class="footer-text">Creato con il ❤ da Gabriele Cocchetti - Studente dell'Istituto tecnico Industriale Statale Benedetto Castelli - Based in Brescia (BS)</p>
+            <p class="footer-text">Built with ❤ by Gabriele Cocchetti - Istituto tecnico Industriale Statale Benedetto Castelli's student - Based in Brescia (BS)</p>
         </footer>
         <br>
 
