Update versione inglese v.2.0.1
Fixati i collegamenti e i passaggi da una lingua all'altra

--- a/SitoPassione/pag3.html
+++ b/SitoPassione/pag3.html
@@ -27,7 +27,7 @@
                 <li class="header__menu__item"><a class= "testohead" href="pag1.html">Cos'è la musica?</a></li>
                 <li class="header__menu__item"><a class= "testohead" href="pag2.html">La Storia</a></li>
                 <li class="header__menu__item"><a class= "testohead" href="pag3.html">La mia esperienza</a></li>
-                <li class="header__menu__item"><a class= "testohead" href="/eng/pag3.html">🇬🇧</a></li>
+                <li class="header__menu__item"><a class= "testohead" href="./eng/pag3.html">🇬🇧</a></li>
             </ul>
         </header>
 
