--- a/SitoPassione/index.html
+++ b/SitoPassione/index.html
@@ -33,7 +33,7 @@
 
         <br> 
         <h1>La Musica</h1>
-        <p>Il mondo del djing <br>English version is under developing.</p>
+        <p>Il mondo del djing <br><br><br> English version is now under developing.</p>
         <br> <br> <br> <br> <br>
         <img class=foto src="/media/console.png">
 
